--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Yo Yo Yo World</h1>
-<p>The Host with the Most.. GitHub Pages</p>
+<p>The Host with the Most.. GitHub Pages, My Brother</p>
 </body>
 </html>
