--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Yo Yo Yo World</h1>
 <p>The Host with the Most.. GitHub Pages, My Brother</p>
+<a href="CenterWebpage.html">Center Room</a>
 </body>
 </html>
