--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>	
+  <link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937">
+</head>
 <body>
 <h1>Yo Yo Yo World</h1>
 <p>The Host with the Most.. GitHub Pages, My Brother</p>
-<a href="CenterWebpage.html">Center Room</a>
+<!-- <a href=".html">Zone</a> -->
+<a href="thiswthing-mail.html">eM Room</a>
+<!-- <a href=".html">Verse</a> -->
 </body>
 </html>
