--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body>
 <h1>Yo Yo Yo World</h1>
 <p>The Host with the Most.. GitHub Pages, My Brother</p>
+<a href="https://data-engineer.glitch.me/index.html">Verse</a>
 <!-- <a href=".html">Zone</a> -->
-<a href="thiswthing-mail.html">eM Room</a>
 <!-- <a href=".html">Verse</a> -->
+<!-- <a href="thiswthing-mail.html">eM Room</a> -->
 </body>
 </html>
