--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>	
+  <title>Analyze - Innovate - Create</title> 
   <link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937">
 </head>
 <body>
