Chg ThsW add img

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>	
-  <title>Analyze - Innovate - Create</title> 
-  <link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937">
+<title>Innovate - Create</title> 
+<link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937">
+<style type="text/css">
+    
+html { background-image: url("img/71848fd22b78ca45b3dd628888f6b866.jpg");   height: 96%} 
+
+                                                       /*71848fd22b78ca45b3dd628888f6b866.jpg  align-items: center; justify-content: center;    */
+body { background-image: url("img/black-wood-texture-background.webp"); background-color: grey;   height: 96% } 
+
+</style>
 </head>
 <body>
-<h1>Yo Yo Yo World</h1>
-<p>The Host with the Most.. GitHub Pages, My Brother</p>
-<a href="https://data-engineer.glitch.me/index.html">Verse</a>
-<!-- <a href=".html">Zone</a> -->
-<!-- <a href=".html">Verse</a> -->
-<!-- <a href="thiswthing-mail.html">eM Room</a> -->
+  <h1>Yo Yo Yo World</h1>
+  <p>The Host with the Most.. GitHub Pages, My Brother</p>
+  <a href="https://data-engineer.glitch.me/index.html">Verse</a>
+  <!-- <a href=".html">Zone</a> -->
+  <!-- <a href=".html">Verse</a> -->
+  <!-- <a href="thiswthing-mail.html">eM Room</a> -->
 </body>
 </html>
