--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 html { background-image: url("img/71848fd22b78ca45b3dd628888f6b866.jpg");   height: 96%} 
 
                                                        /*71848fd22b78ca45b3dd628888f6b866.jpg  align-items: center; justify-content: center;    */
-body { background-image: url("img/black-wood-texture-background.webp"); background-color: grey;   height: 96% } 
+body { background-image: url("img/black-wood-texture-background.webp"); 
+       background-color: grey;   
+       height: 96% 
+       color: white;
+     } 
 
 </style>
 </head>
