--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ html { background-image: url("img/71848fd22b78ca45b3dd628888f6b866.jpg");   heig
                                                        /*71848fd22b78ca45b3dd628888f6b866.jpg  align-items: center; justify-content: center;    */
 body { background-image: url("img/black-wood-texture-background.webp"); 
        background-color: grey;   
-       height: 96% 
+       height: 96% ;
        color: white;
      } 
 
