--- a/thiswthing.html
+++ b/thiswthing.html
@@ -4,9 +4,12 @@
     <title>W3.CSS Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href='https://fonts.googleapis.com/css?family=RobotoDraft' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><style>
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> --> <!--  RFC00  -->
+    <link rel="stylesheet" href="w3.css"> <!--  RFC01  -->
+    <link href='https://fonts.googleapis.com/css?family=RobotoDraft' rel='stylesheet' type='text/css'> <!--  RFC .. -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><style> --> <!--  RFC00  -->
+    <link rel="stylesheet" href="font-awesome.min.css"> <!--  RFC01  -->
+    <style>
     html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
     .w3-bar-block .w3-bar-item {padding: 16px}
     </style>
@@ -15,7 +18,7 @@
 
 <!-- Side Navigation -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-white w3-animate-left w3-card" style="z-index:3;width:320px;" id="mySidebar">
-  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a>
+  <!-- <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a> -->   <!--  RFC00 rmvd -->
   <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu" 
   class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-dark-grey w3-button w3-hover-black w3-left-align" onclick="document.getElementById('id01').style.display='block'">New Message <i class="w3-padding fa fa-pencil"></i></a>
@@ -23,20 +26,23 @@
   <div id="Demo1" class="w3-hide w3-animate-left">
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Borge');w3_close();" id="firstTab">
       <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar3.png" style="width:15%;"><span class="w3-opacity w3-large">Borge Refsnes</span>
+        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar3.png" style="width:15%;"><span class="w3-opacity w3-large">Borge Refsnes</span> --> <!--  RFC00  -->
+        <img class="w3-round w3-margin-right" src="img/avatar3.png" style="width:15%;"><span class="w3-opacity w3-large">Borge Refsnes</span> <!--  RFC01  -->
         <h6>Subject: Remember Me</h6>
         <p>Hello, i just wanted to let you know that i'll be home at...</p>
       </div>
     </a>
      <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
       <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span>
+        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span> -->  <!--  RFC00  -->
+        <img class="w3-round w3-margin-right" src="img/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span>  <!--  RFC01  -->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
       </div>
     </a>
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
       <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span>
+        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span> -->  <!--  RFC00  -->
+        <img class="w3-round w3-margin-right" src="img/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span> <!--  RFC01  -->
         <p>Welcome!</p>
       </div>
     </a>
@@ -80,7 +86,8 @@
 
 <div id="Borge" class="w3-container person">
   <br>
-  <img class="w3-round  w3-animate-top" src="https://www.w3schools.com/w3images/avatar3.png" style="width:20%;">
+  <!-- <img class="w3-round  w3-animate-top" src="https://www.w3schools.com/w3images/avatar3.png" style="width:20%;"> -->  <!--  RFC00  -->
+  <img class="w3-round  w3-animate-top" src="img/avatar3.png" style="width:20%;">  <!--  RFC01  -->
   <h5 class="w3-opacity">Subject: Remember Me</h5>
   <h4><i class="fa fa-clock-o"></i> From Borge Refsnes, Sep 27, 2015.</h4>
   <a class="w3-button w3-light-grey" href="#">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
@@ -93,7 +100,8 @@
 
 <div id="Jane" class="w3-container person">
   <br>
-  <img class="w3-round w3-animate-top" src="https://www.w3schools.com/w3images/avatar5.png" style="width:20%;">
+  <!-- <img class="w3-round w3-animate-top" src="https://www.w3schools.com/w3images/avatar5.png" style="width:20%;"> --> <!--  RFC00  -->
+  <img class="w3-round w3-animate-top" src="img/avatar5.png" style="width:20%;"> <!--  RFC01  -->
   <h5 class="w3-opacity">Subject: None</h5>
   <h4><i class="fa fa-clock-o"></i> From Jane Doe, Sep 25, 2015.</h4>
   <a class="w3-button w3-light-grey">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
@@ -105,7 +113,8 @@
 
 <div id="John" class="w3-container person">
   <br>
-  <img class="w3-round w3-animate-top" src="https://www.w3schools.com/w3images/avatar2.png" style="width:20%;">
+  <!-- <img class="w3-round w3-animate-top" src="https://www.w3schools.com/w3images/avatar2.png" style="width:20%;"> --> <!--  RFC00  -->
+  <img class="w3-round w3-animate-top" src="img/avatar2.png" style="width:20%;"> <!--  RFC01  -->
   <h5 class="w3-opacity">Subject: None</h5>
   <h4><i class="fa fa-clock-o"></i> From John Doe, Sep 23, 2015.</h4>
   <a class="w3-button w3-light-grey">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
