--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body { background-image: url("img/black-wood-texture-background.webp");
 </head>
 <body>
   <h1>Yo Yo Yo World</h1>
-  <p>The Host with the Most.. GitHub Pages, My Brother</p>
+  <p>The Host with the Most.. GitHub Pages</p>
   <a href="https://data-engineer.glitch.me/index.html">Verse</a>
   <!-- <a href=".html">Zone</a> -->
   <!-- <a href=".html">Verse</a> -->
