--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ body { background-image: url("img/black-wood-texture-background.webp");
 <body>
   <h1>Yo Yo Yo World</h1>
   <p>The Host with the Most.. GitHub Pages</p>
-  <a href="https://data-engineer.glitch.me/index.html">Verse</a>
+  <a href="https://data-engineer.glitch.me/index.html">mVerse</a>
   <!-- <a href=".html">Zone</a> -->
   <!-- <a href=".html">Verse</a> -->
-  <!-- <a href="thiswthing-mail.html">eM Room</a> -->
+  <a href="thiswthing.html">w Room</a>
 </body>
 </html>
