--- a/thiswthing.html
+++ b/thiswthing.html
@@ -18,7 +18,7 @@
 
 <!-- Side Navigation -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-white w3-animate-left w3-card" style="z-index:3;width:320px;" id="mySidebar">
-  <!-- <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a> -->   <!--  RFC00 rmvd -->
+  <!-- <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a> --> <!--  RFC00 rmvd -->
   <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu" 
   class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-dark-grey w3-button w3-hover-black w3-left-align" onclick="document.getElementById('id01').style.display='block'">New Message <i class="w3-padding fa fa-pencil"></i></a>
@@ -34,14 +34,14 @@
     </a>
      <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
       <div class="w3-container">
-        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span> -->  <!--  RFC00  -->
+        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span> --> <!--  RFC00  -->
         <img class="w3-round w3-margin-right" src="img/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span>  <!--  RFC01  -->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
       </div>
     </a>
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
       <div class="w3-container">
-        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span> -->  <!--  RFC00  -->
+        <!-- <img class="w3-round w3-margin-right" src="https://www.w3schools.com/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span> --> <!--  RFC00  -->
         <img class="w3-round w3-margin-right" src="img/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span> <!--  RFC01  -->
         <p>Welcome!</p>
       </div>
@@ -152,7 +152,7 @@ function myFunc(id) {
   }
 }
 
-openMail("Borge")
+// openMail("Borge")
 function openMail(personName) {
   var i;
   var x = document.getElementsByClassName("person");
