--- a/thiswthing.html
+++ b/thiswthing.html
@@ -89,7 +89,7 @@
   <!-- <img class="w3-round  w3-animate-top" src="https://www.w3schools.com/w3images/avatar3.png" style="width:20%;"> -->  <!--  RFC00  -->
   <img class="w3-round  w3-animate-top" src="img/avatar3.png" style="width:20%;">  <!--  RFC01  -->
   <h5 class="w3-opacity">Subject: Remember Me</h5>
-  <h4><i class="fa fa-clock-o"></i> From Borge Refsnes, Sep 27, 2015.</h4>
+  <h4><i class="fa fa-clock-o"></i> From Borge Refr, Sep 27, 2015.</h4>
   <a class="w3-button w3-light-grey" href="#">Reply<i class="w3-margin-left fa fa-mail-reply"></i></a>
   <a class="w3-button w3-light-grey" href="#">Forward<i class="w3-margin-left fa fa-arrow-right"></i></a>
   <hr>
