--- a/thiswthing.html
+++ b/thiswthing.html
@@ -152,7 +152,7 @@ function myFunc(id) {
   }
 }
 
-// openMail("Borge")
+// openMail("Borge")              // commented out..  Borge eml still dsplyd on pg rfrsh
 function openMail(personName) {
   var i;
   var x = document.getElementsByClassName("person");
