--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body { background-image: url("img/black-wood-texture-background.webp");
 </style>
 </head>
 <body>
-  <h1>Yo Yo Yo World</h1>
-  <p>The Host with the Most.. GitHub Pages</p>
+  <h1>Hey World</h1>
+  <p>Hosting Eternity</p>
   <a href="https://data-engineer.glitch.me/index.html">mVerse</a>
   <!-- <a href=".html">Zone</a> -->
   <!-- <a href=".html">Verse</a> -->
