--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>	
 <title>Innovate - Create</title> 
-<link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937">
+<!-- <link rel="icon" type="image/png" sizes="128x128" href="https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20B-W.png?v=1570724492937"> -->
+<link rel="icon" type="image/png" sizes="128x128" href='https://cdn.glitch.com/69ce3134-36b9-499f-8889-8222fc739cac%2FIinTii%2000%20W-B.png?v=1570724413985'>
 <style type="text/css">
     
 html { background-image: url("img/71848fd22b78ca45b3dd628888f6b866.jpg");   height: 96%} 
@@ -10,7 +11,7 @@ html { background-image: url("img/71848fd22b78ca45b3dd628888f6b866.jpg");   heig
                                                        /*71848fd22b78ca45b3dd628888f6b866.jpg  align-items: center; justify-content: center;    */
 body { background-image: url("img/black-wood-texture-background.webp"); 
        background-color: grey;   
-       height: 96% ;
+       height: 98% ;
        color: white;
      } 
 
@@ -23,5 +24,16 @@ body { background-image: url("img/black-wood-texture-background.webp");
   <!-- <a href=".html">Zone</a> -->
   <!-- <a href=".html">Verse</a> -->
   <a href="thiswthing.html">w Room</a>
-</body>
-</html>
+
+  <table><tr>   <!-- <br><br>   -->   <!-- </tr><tr> -->              
+  <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190255.8460334488!2d-87.73196395!3d41.83373295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1710171831042!5m2!1sen!2sus" 
+          style="width: 30vw; height: 40vh; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+          
+  <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d109821.23865454819!2d-87.73605266084594!3d41.88324661966999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1710171874202!5m2!1sen!2sus" 
+          style="width: 30vw; height: 40vh; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+  </tr><tr>
+  <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2971.024659552095!2d-87.62827519999999!3d41.8708159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c99fbed60a3%3A0x9f7e3d1052adc7d3!2s899%20S%20Plymouth%20Ct%2C%20Chicago%2C%20IL%2060605!5e0!3m2!1sen!2sus!4v1710006560994!5m2!1sen!2sus" 
+          style="width: 30vw; height: 40vh; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+  </tr></table>
+</body>              <!-- style="display: inline-flex;"  --> <!-- width="600" height="450"  --> <!-- width="500" height="350"  -->
+</html>              <!-- allowfullscreen="true" ..allowfullscreen ..allow="fullscreen" -- 0/3 seem to have effect.  MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/iframe  -->
